--- a/CSS/Bootstrap Intro/index.html
+++ b/CSS/Bootstrap Intro/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bootstrap</title>
+  <link rel="icon" type="image/x-icon" href="./flower.jpg">
+
   <!-- TODO 1: Add the Bootstrap link here. -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" 
   integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -28,17 +30,7 @@
       <div class="card-body">
         <h5 class="card-title">Beautiful Sunflower</h5>
         <p class="card-text">This is a beautiful yellow sunflower into the wilds of Arizona</p>
-        <a href="#" class="btn btn-primary">Click Here <!DOCTYPE html>
-        <html lang="en">
-        <head>
-          <meta charset="UTF-8">
-          <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <title>Document</title>
-        </head>
-        <body>
-          
-        </body>
-        </html></a>
+        <a href="#" class="btn btn-primary">Click Here !</a>
       </div>
     </div>
   </div>
